5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1578_1560.log
== SUBMITION (2019-03-13 12:32:25) 
-- CODE:
string = ""Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.???)
-- EXECUTION TIME:
0.144727
-- ERROR:
  File "/home/codebench/codes/1578/1560/main.py", line 1
    string = ""Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:33:21) 
-- CODE:
string = ""Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.string())
-- EXECUTION TIME:
0.115912
-- ERROR:
  File "/home/codebench/codes/1578/1560/main.py", line 1
    string = ""Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:35:01) 
-- CODE:
string = ""Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("AUGUSTA ADA BYRON, A CONDESSA DE LOVELACE, NASCEU EM 1815, NA INGLATERRA.string())
-- EXECUTION TIME:
0.105625
-- ERROR:
  File "/home/codebench/codes/1578/1560/main.py", line 1
    string = ""Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:36:55) 
-- CODE:
string = ""Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("AUGUSTA ADA BYRON, A CONDESSA DE LOVELACE, NASCEU EM 1815, NA INGLATERRA.lower())
-- EXECUTION TIME:
0.127011
-- ERROR:
  File "/home/codebench/codes/1578/1560/main.py", line 1
    string = ""Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:37:10) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("AUGUSTA ADA BYRON, A CONDESSA DE LOVELACE, NASCEU EM 1815, NA INGLATERRA.lower())
-- EXECUTION TIME:
0.21215
-- ERROR:
  File "/home/codebench/codes/1578/1560/main.py", line 2
    print("AUGUSTA ADA BYRON, A CONDESSA DE LOVELACE, NASCEU EM 1815, NA INGLATERRA.lower())
                                                                                           ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:38:08) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("AUGUSTA ADA BYRON, A CONDESSA DE LOVELACE, NASCEU EM 1815, NA INGLATERRA."lower())
-- EXECUTION TIME:
0.200399
-- ERROR:
  File "/home/codebench/codes/1578/1560/main.py", line 2
    print("AUGUSTA ADA BYRON, A CONDESSA DE LOVELACE, NASCEU EM 1815, NA INGLATERRA."lower())
                                                                                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:38:18) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("AUGUSTA ADA BYRON, A CONDESSA DE LOVELACE, NASCEU EM 1815, NA INGLATERRA.".lower())
-- EXECUTION TIME:
0.153788
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:31:24) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("AUGUSTA ADA BYRON, A CONDESSA DE LOVELACE, NASCEU EM 1815, NA INGLATERRA.".lower())
-- EXECUTION TIME:
0.19524
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:51:47) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("AUGUSTA ADA BYRON, A CONDESSA DE LOVELACE, NASCEU EM 1815, NA INGLATERRA.".lower())
-- EXECUTION TIME:
0.131527
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:56:40) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("AUGUSTA ADA BYRON, A CONDESSA DE LOVELACE, NASCEU EM 1815, NA INGLATERRA.".lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
